--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,1 @@
-<%= form_with(model: @article) do |form| %>
-  <div>
-    <%=form.label :title%>
-    <%=form.text_field :title%>
-  </div>
-<% end %>
+<%= render "articles/form" %>
