--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,8 +1,13 @@
 <nav class="nav bg-light padding">
-  <li class="nav-item"><%= link_to "Inicio", root_path, class:"nav-link" %></li>
-  <li class="nav-item"><%= link_to "Artículos", articles_path, class:"nav-link" %></li>
-  <li class="nav-item"><%= link_to "Escribir", new_article_path, class:"nav-link" %></li>
+  <li class="nav-item"><%= link_to "Index", root_path, class:"nav-link" %></li>
+  <li class="nav-item"><%= link_to "Articles", articles_path, class:"nav-link" %></li>
   <% if user_signed_in? %>
+    <li class="nav-item">
+      <%= link_to "My Articles", my_articles_path, class:"nav-link" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to "New Article", new_article_path, class:"nav-link" %>
+    </li>
     <li class="nav-item">
       <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link" %>
     </li>
