--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,29 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="large-container center-block">
+  <h1>Categories</h1>
 
-<h1>Categories</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Color</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @categories.each do |category| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= category.title %></td>
-        <td><%= category.color %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th class="padding">Color</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @categories.each do |category| %>
+        <tr>
+          <td><h2><%= link_to category.title, category, class: 'text-info'%></h2></td>
+          <td class="padding"><div style="background-color:<%= category.color %>;height:5px; width: 20px;"></div></td>
+          <td class="padding"><%= link_to 'Edit', edit_category_path(category) %></td>
+          <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Category', new_category_path %>
+  <%= link_to 'New Category', new_category_path, class:'btn btn-dark margin-top' %>
+</div>
