--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,6 +1,7 @@
 <nav class="nav bg-light padding">
   <li class="nav-item"><%= link_to "Index", root_path, class:"nav-link" %></li>
   <li class="nav-item"><%= link_to "Articles", articles_path, class:"nav-link" %></li>
+  <li class="nav-item"><%= link_to "Categories", categories_path, class:"nav-link" %></li>
   <% if user_signed_in? %>
     <li class="nav-item">
       <%= link_to "My Articles", my_articles_path, class:"nav-link" %>
