--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <div class="card padding margin-top">
   <h2 class="text-uppercase"><%= article.title %></h2>
   <p class="text-secondary"><%= article.created_at %></p>
-  <%= link_to "Read more", article %>
+  <span><%= link_to "Read more", article, class: 'btn btn-info' %></span>
 </div>
